Fix up a bunch of issues with the track-changes list view.
- not crash when a user is null
- fix alignment of user color square
- if first and last name are absent, display email instead
- truncate overly long display name with '...'

--- a/services/web/public/stylesheets/app/editor/track-changes.less
+++ b/services/web/public/stylesheets/app/editor/track-changes.less
@@ -139,11 +139,14 @@
 							width: 12px;
 							border-radius: 3px;
 							position: absolute;
-							top: 3px;
 							left: 0;
+							bottom: 3px;
 						}
 						.name {
-							display: inline-block;
+							width: 94%;
+							white-space: nowrap;
+							overflow: hidden;
+							text-overflow: ellipsis;
 						}
 					}
 				}
